# MyteCody-BE

./: .env  pyproject.toml
Myte/: updatefiles.py
src/: __init__.py  config.py  db.py
src/app/: app.py
src/app/auth/: reset-password.html  routes.py  schema.py  services.py  signup-verification.html
src/app/healper/: response.py  validators.py
src/app/individualProfile/: routes.py  schema.py  services.py
src/app/proposal/: routes.py  schema.py  services.py
src/app/stripe/: routes.py  schema.py  services.py
src/app/subscription/: routes.py  schema.py  services.py
src/app/templates/: Proposal.html
src/app/user/: routes.py  schema.py  services.py
src/app/utils/: constants.py  messages.py  openai_functions.py  pdf.py  prompts.py  userTypeEnum.py
src/app/wallet/: routes.py  schema.py  services.py
